--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Raleway:wght@500&display=swap');
 @import 'tailwindcss';
 
+body {
+  @media (min-width: 3500px) {
+    font-size: 2em;
+    .text-lg {
+      font-size: 2em;
+    }
+    .md\:text-9xl {
+      font-size: 6em;
+    }
+
+    .md\:text-8xl {
+      font-size: 5em;
+    }
+    .md\:text-7xl {
+      font-size: 4em;
+    }
+    .md\:text-6xl {
+      font-size: 3em;
+    }
+  }
+}
 .spotzer-css {
   h1,
   h2,
