--- a/src/output.css
+++ b/src/output.css
@@ -15,8 +15,6 @@
     --color-red-800: oklch(0.444 0.177 26.899);
     --color-blue-900: oklch(0.379 0.146 265.522);
     --color-blue-950: oklch(0.282 0.091 267.935);
-    --color-gray-700: oklch(0.373 0.034 259.733);
-    --color-gray-800: oklch(0.278 0.033 256.848);
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-lg: 1.125rem;
@@ -394,9 +392,6 @@
   }
   .mb-\[2vw\] {
     margin-bottom: 2vw;
-  }
-  .mb-\[4vw\] {
-    margin-bottom: 4vw;
   }
   .mb-\[20px\] {
     margin-bottom: 20px;
@@ -1359,9 +1354,6 @@
   .p-\[20px\] {
     padding: 20px;
   }
-  .p-\[40px\] {
-    padding: 40px;
-  }
   .px-\[6vw\] {
     padding-inline: 6vw;
   }
@@ -1385,9 +1377,6 @@
   }
   .pe-\[10px\] {
     padding-inline-end: 10px;
-  }
-  .pt-\[20px\] {
-    padding-top: 20px;
   }
   .pb-\[2vw\] {
     padding-bottom: 2vw;
@@ -2020,21 +2009,6 @@
       }
     }
   }
-  .group-hover\:text-red-700 {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        color: var(--color-red-700);
-      }
-    }
-  }
-  .group-hover\:invert-20 {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        --tw-invert: invert(20%);
-        filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
-      }
-    }
-  }
   .group-hover\:duration-200 {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
@@ -2048,16 +2022,6 @@
       @media (hover: hover) {
         --tw-ease: var(--ease-in);
         transition-timing-function: var(--ease-in);
-      }
-    }
-  }
-  .hover\:scale-90 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-scale-x: 90%;
-        --tw-scale-y: 90%;
-        --tw-scale-z: 90%;
-        scale: var(--tw-scale-x) var(--tw-scale-y);
       }
     }
   }
@@ -2075,27 +2039,6 @@
     &:hover {
       @media (hover: hover) {
         background-color: #040433;
-      }
-    }
-  }
-  .hover\:bg-blue-950 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-blue-950);
-      }
-    }
-  }
-  .hover\:bg-gray-700 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-gray-700);
-      }
-    }
-  }
-  .hover\:bg-gray-800 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-gray-800);
       }
     }
   }
@@ -2117,13 +2060,6 @@
     &:hover {
       @media (hover: hover) {
         fill: var(--color-red-400);
-      }
-    }
-  }
-  .hover\:text-blue-950 {
-    &:hover {
-      @media (hover: hover) {
-        color: var(--color-blue-950);
       }
     }
   }
@@ -2188,11 +2124,6 @@
   .md\:ms-\[1vw\] {
     @media (width >= 48rem) {
       margin-inline-start: 1vw;
-    }
-  }
-  .md\:mt-0 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 0);
     }
   }
   .md\:mt-\[2vw\] {
@@ -2265,6 +2196,16 @@
       width: 80%;
     }
   }
+  .md\:w-\[full\] {
+    @media (width >= 48rem) {
+      width: full;
+    }
+  }
+  .md\:w-full {
+    @media (width >= 48rem) {
+      width: 100%;
+    }
+  }
   .md\:flex-row {
     @media (width >= 48rem) {
       flex-direction: row;
@@ -2290,9 +2231,19 @@
       padding-inline: .5vw;
     }
   }
+  .md\:px-\[2vw\] {
+    @media (width >= 48rem) {
+      padding-inline: 2vw;
+    }
+  }
   .md\:px-\[4vw\] {
     @media (width >= 48rem) {
       padding-inline: 4vw;
+    }
+  }
+  .md\:py-\[1vw\] {
+    @media (width >= 48rem) {
+      padding-block: 1vw;
     }
   }
   .md\:py-\[4vw\] {
@@ -2318,11 +2269,6 @@
   .md\:pe-\[6vw\] {
     @media (width >= 48rem) {
       padding-inline-end: 6vw;
-    }
-  }
-  .md\:pt-\[6vw\] {
-    @media (width >= 48rem) {
-      padding-top: 6vw;
     }
   }
   .md\:pb-0 {
@@ -2393,6 +2339,26 @@
   .lg\:pe-\[1vw\] {
     @media (width >= 64rem) {
       padding-inline-end: 1vw;
+    }
+  }
+}
+body {
+  @media (min-width: 3500px) {
+    font-size: 2em;
+    .text-lg {
+      font-size: 2em;
+    }
+    .md\:text-9xl {
+      font-size: 6em;
+    }
+    .md\:text-8xl {
+      font-size: 5em;
+    }
+    .md\:text-7xl {
+      font-size: 4em;
+    }
+    .md\:text-6xl {
+      font-size: 3em;
     }
   }
 }
