--- a/src/output.css
+++ b/src/output.css
@@ -2398,6 +2398,24 @@ h1, h2, h3 {
   fill: #e9e4de;
   margin-left: -1px;
 }
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 @property --tw-translate-x {
   syntax: "*";
   inherits: false;
