progress on ambitious

--- a/src/output.css
+++ b/src/output.css
@@ -8,6 +8,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-300: oklch(0.808 0.114 19.571);
     --color-red-400: oklch(0.704 0.191 22.216);
     --color-red-500: oklch(0.637 0.237 25.331);
     --color-red-700: oklch(0.505 0.213 27.518);
@@ -403,6 +404,12 @@
   .mb-\[2vw\] {
     margin-bottom: 2vw;
   }
+  .mb-\[4vw\] {
+    margin-bottom: 4vw;
+  }
+  .mb-\[10px\] {
+    margin-bottom: 10px;
+  }
   .mb-\[20px\] {
     margin-bottom: 20px;
   }
@@ -493,8 +500,11 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
-  .h-\[53vw\] {
-    height: 53vw;
+  .h-\[40vw\] {
+    height: 40vw;
+  }
+  .h-\[55vw\] {
+    height: 55vw;
   }
   .h-\[100px\] {
     height: 100px;
@@ -1177,6 +1187,9 @@
   .bg-blue-950 {
     background-color: var(--color-blue-950);
   }
+  .bg-red-300 {
+    background-color: var(--color-red-300);
+  }
   .bg-red-500 {
     background-color: var(--color-red-500);
   }
@@ -1188,12 +1201,6 @@
   }
   .bg-red-700 {
     background-color: var(--color-red-700);
-  }
-  .bg-transparent {
-    background-color: transparent;
-  }
-  .bg-white {
-    background-color: var(--color-white);
   }
   .-bg-conic {
     --tw-gradient-position: in oklab;
@@ -1408,9 +1415,6 @@
   }
   .pt-\[6vw\] {
     padding-top: 6vw;
-  }
-  .pt-\[8vw\] {
-    padding-top: 8vw;
   }
   .pt-\[10px\] {
     padding-top: 10px;
@@ -1736,10 +1740,6 @@
   }
   .shadow {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-md {
-    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .ring {
@@ -2140,11 +2140,6 @@
       position: fixed;
     }
   }
-  .md\:relative {
-    @media (width >= 48rem) {
-      position: relative;
-    }
-  }
   .md\:top-\[-1vw\] {
     @media (width >= 48rem) {
       top: -1vw;
@@ -2185,24 +2180,19 @@
       margin-top: 6vw;
     }
   }
-  .md\:mt-\[8vw\] {
-    @media (width >= 48rem) {
-      margin-top: 8vw;
-    }
-  }
   .md\:mb-0 {
     @media (width >= 48rem) {
       margin-bottom: calc(var(--spacing) * 0);
     }
   }
+  .md\:mb-\[1vw\] {
+    @media (width >= 48rem) {
+      margin-bottom: 1vw;
+    }
+  }
   .md\:mb-\[6vw\] {
     @media (width >= 48rem) {
       margin-bottom: 6vw;
-    }
-  }
-  .md\:h-\[35vw\] {
-    @media (width >= 48rem) {
-      height: 35vw;
     }
   }
   .md\:h-\[38vw\] {
@@ -2213,6 +2203,21 @@
   .md\:h-\[50vw\] {
     @media (width >= 48rem) {
       height: 50vw;
+    }
+  }
+  .md\:h-\[80vh\] {
+    @media (width >= 48rem) {
+      height: 80vh;
+    }
+  }
+  .md\:h-\[81vh\] {
+    @media (width >= 48rem) {
+      height: 81vh;
+    }
+  }
+  .md\:h-\[82vh\] {
+    @media (width >= 48rem) {
+      height: 82vh;
     }
   }
   .md\:h-auto {
@@ -2243,6 +2248,11 @@
   .md\:w-\[50\%\] {
     @media (width >= 48rem) {
       width: 50%;
+    }
+  }
+  .md\:w-\[60\%\] {
+    @media (width >= 48rem) {
+      width: 60%;
     }
   }
   .md\:w-\[70\%\] {
@@ -2358,21 +2368,6 @@
   .md\:pt-\[\.8vw\] {
     @media (width >= 48rem) {
       padding-top: .8vw;
-    }
-  }
-  .md\:pt-\[1vw\] {
-    @media (width >= 48rem) {
-      padding-top: 1vw;
-    }
-  }
-  .md\:pt-\[8vw\] {
-    @media (width >= 48rem) {
-      padding-top: 8vw;
-    }
-  }
-  .md\:pt-\[10vw\] {
-    @media (width >= 48rem) {
-      padding-top: 10vw;
     }
   }
   .md\:pt-\[12vw\] {
