--- a/alastair_upton/src/output.css
+++ b/alastair_upton/src/output.css
@@ -227,14 +227,8 @@
   .p-5 {
     padding: calc(var(--spacing) * 5);
   }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
-  }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
-  }
-  .pt-0 {
-    padding-top: calc(var(--spacing) * 0);
   }
   .pt-5 {
     padding-top: calc(var(--spacing) * 5);
@@ -296,11 +290,6 @@
       width: 10vw;
     }
   }
-  .lg\:w-\[33\%\] {
-    @media (width >= 64rem) {
-      width: 33%;
-    }
-  }
   .lg\:w-\[33\.33\%\] {
     @media (width >= 64rem) {
       width: 33.33%;
@@ -347,9 +336,29 @@
       border-inline-end-width: 1px;
     }
   }
+  .lg\:p-0 {
+    @media (width >= 64rem) {
+      padding: calc(var(--spacing) * 0);
+    }
+  }
   .lg\:p-5 {
     @media (width >= 64rem) {
       padding: calc(var(--spacing) * 5);
+    }
+  }
+  .lg\:p-10 {
+    @media (width >= 64rem) {
+      padding: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:px-5 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 5);
+    }
+  }
+  .lg\:px-10 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 10);
     }
   }
   .lg\:px-\[4vw\] {
@@ -357,9 +366,14 @@
       padding-inline: 4vw;
     }
   }
-  .lg\:py-\[2vw\] {
+  .lg\:py-10 {
     @media (width >= 64rem) {
-      padding-block: 2vw;
+      padding-block: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:ps-5 {
+    @media (width >= 64rem) {
+      padding-inline-start: calc(var(--spacing) * 5);
     }
   }
   .lg\:ps-\[calc\(10vw\+2em\)\] {
@@ -367,9 +381,44 @@
       padding-inline-start: calc(10vw + 2em);
     }
   }
+  .lg\:pe-5 {
+    @media (width >= 64rem) {
+      padding-inline-end: calc(var(--spacing) * 5);
+    }
+  }
   .lg\:pe-\[2em\] {
     @media (width >= 64rem) {
       padding-inline-end: 2em;
+    }
+  }
+  .lg\:pt-0 {
+    @media (width >= 64rem) {
+      padding-top: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:pt-5 {
+    @media (width >= 64rem) {
+      padding-top: calc(var(--spacing) * 5);
+    }
+  }
+  .lg\:pt-10 {
+    @media (width >= 64rem) {
+      padding-top: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:pt-\[2vw\] {
+    @media (width >= 64rem) {
+      padding-top: 2vw;
+    }
+  }
+  .lg\:pb-5 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 5);
+    }
+  }
+  .lg\:pb-10 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 10);
     }
   }
   .lg\:text-\[2vw\] {
@@ -408,6 +457,9 @@ body {
     }
     .lg\:text-6xl, .md\:text-6xl {
       font-size: 3em;
+    }
+    .lg\:p-5 {
+      padding: 40px;
     }
   }
 }
